--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-* {
+ * {
   box-sizing: border-box;
 }
 body {
@@ -8,7 +8,11 @@ body {
   font-weight: 400;
   font-family: "Fira Sans", sans-serif;
 }
-
+#root{
+  height: 100vh;
+width: 100%;
+}
+/*
 h1,
 h2,
 h3,
@@ -50,11 +54,11 @@ html,
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(0, 1, 13, 0.2);
   /* padding: 40px 55px 45px 55px; */
-  border-radius: 15px;
+  /* border-radius: 15px;
   transition: all 0.3s;
-}
+} */
 
-.auth-wrapper .form-control:focus {
+/* .auth-wrapper .form-control:focus {
   border-color: #00214c;
   box-shadow: none;
 }
@@ -81,4 +85,4 @@ html,
 
 .forgot-password a {
   color: #0a0478;
-}
+} */ 
