--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #985bda !important;
+  background:white !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
