--- a/src/styles.css
+++ b/src/styles.css
@@ -101,8 +101,8 @@ body {
     margin: 10px;
     padding: 15px 30px;
     font-size: 16px;
-    color: brown;
-    background-color:skyblue;
+    color: white;
+    background-color:#0d6efd;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -110,6 +110,6 @@ body {
   }
   
   .role-button:hover {
-    background-color: whitesmoke ;
+    background-color: #0a53be ;
   }
   
